// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/BadgeList > should accept background color for badges 1`] = `
<DocumentFragment>
  <div
    class="flex flex-wrap gap-1"
    data-testid="tw-badge-list"
  >
    <div
      class="inline-flex items-center w-fit py-0.5 px-2 rounded border border-transparent text-[0.75rem] font-medium transition-colors overflow-wrap-anywhere bg-badge-10"
      data-testid="tw-badge"
    >
      badge-1
    </div>
    <div
      class="inline-flex items-center w-fit py-0.5 px-2 rounded border border-transparent text-[0.75rem] font-medium transition-colors overflow-wrap-anywhere bg-badge-6"
      data-testid="tw-badge"
    >
      badge-important
    </div>
    <div
      class="inline-flex items-center w-fit py-0.5 px-2 rounded border border-transparent text-[0.75rem] font-medium transition-colors overflow-wrap-anywhere bg-badge-10"
      data-testid="tw-badge"
    >
      badge-3
    </div>
  </div>
</DocumentFragment>
`;

exports[`components/BadgeList > should highlight selected badges 1`] = `
<DocumentFragment>
  <div
    class="flex flex-wrap gap-1"
    data-testid="tw-badge-list"
  >
    <div
      class="inline-flex items-center w-fit py-0.5 px-2 rounded border border-transparent text-[0.75rem] font-medium transition-colors overflow-wrap-anywhere bg-badge-0"
      data-testid="tw-badge"
    >
      badge-1
    </div>
    <div
      class="inline-flex items-center w-fit py-0.5 px-2 rounded border border-transparent text-[0.75rem] font-medium transition-colors overflow-wrap-anywhere bg-badge-6"
      data-testid="tw-badge"
    >
      badge-important
    </div>
    <div
      class="inline-flex items-center w-fit py-0.5 px-2 rounded border text-[0.75rem] font-medium transition-colors overflow-wrap-anywhere bg-primary-wash border-primary"
      data-testid="tw-badge"
    >
      badge-3
    </div>
  </div>
</DocumentFragment>
`;

exports[`components/BadgeList > should highlight selected badges with custom background color 1`] = `
<DocumentFragment>
  <div
    class="flex flex-wrap gap-1"
    data-testid="tw-badge-list"
  >
    <div
      class="inline-flex items-center w-fit py-0.5 px-2 rounded border border-transparent text-[0.75rem] font-medium transition-colors overflow-wrap-anywhere bg-badge-10"
      data-testid="tw-badge"
    >
      badge-1
    </div>
    <div
      class="inline-flex items-center w-fit py-0.5 px-2 rounded border border-transparent text-[0.75rem] font-medium transition-colors overflow-wrap-anywhere bg-badge-6"
      data-testid="tw-badge"
    >
      badge-important
    </div>
    <div
      class="inline-flex items-center w-fit py-0.5 px-2 rounded border text-[0.75rem] font-medium transition-colors overflow-wrap-anywhere bg-primary-wash border-primary"
      data-testid="tw-badge"
    >
      badge-3
    </div>
  </div>
</DocumentFragment>
`;

exports[`components/BadgeList > should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="flex flex-wrap gap-1"
    data-testid="tw-badge-list"
  >
    <div
      class="inline-flex items-center w-fit py-0.5 px-2 rounded border border-transparent text-[0.75rem] font-medium transition-colors overflow-wrap-anywhere bg-badge-0"
      data-testid="tw-badge"
    >
      badge-1
    </div>
    <div
      class="inline-flex items-center w-fit py-0.5 px-2 rounded border border-transparent text-[0.75rem] font-medium transition-colors overflow-wrap-anywhere bg-badge-6"
      data-testid="tw-badge"
    >
      badge-important
    </div>
    <div
      class="inline-flex items-center w-fit py-0.5 px-2 rounded border border-transparent text-[0.75rem] font-medium transition-colors overflow-wrap-anywhere bg-badge-0"
      data-testid="tw-badge"
    >
      badge-3
    </div>
  </div>
</DocumentFragment>
`;

exports[`components/BadgeList > should render a plain env badge inline 1`] = `
<DocumentFragment>
  <div
    class="flex flex-wrap gap-1"
    data-testid="tw-badge-list"
  >
    <div
      class="inline-flex items-center w-fit py-0.5 px-2 rounded border border-transparent text-[0.75rem] font-medium transition-colors overflow-wrap-anywhere bg-badge-10"
      data-testid="tw-badge"
    >
      badge-1
    </div>
    <div
      class="inline-flex items-center w-fit py-0.5 px-2 rounded border border-transparent text-[0.75rem] font-medium transition-colors overflow-wrap-anywhere bg-badge-10"
      data-testid="tw-badge"
    >
      env: test-env
    </div>
  </div>
</DocumentFragment>
`;

exports[`components/BadgeList > should render preformatted parameters as their own blocks 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-1"
    data-testid="tw-badge-list"
  >
    <div
      class="flex flex-wrap gap-1"
    >
      <div
        class="inline-flex items-center w-fit py-0.5 px-2 rounded border border-transparent text-[0.75rem] font-medium transition-colors overflow-wrap-anywhere bg-badge-10"
        data-testid="tw-badge"
      >
        badge-1
      </div>
    </div>
    <div
      class="flex flex-col gap-1"
    >
      <div
        class="group relative w-full rounded border border-transparent text-[0.75rem] bg-badge-10"
      >
        <div
          class="flex items-center justify-between gap-2 px-2 pt-1"
        >
          <span
            class="font-medium leading-[1.125rem]"
          >
            env
          </span>
          <button
            aria-label="Copy env"
            class="rounded-md hover:bg-primary-wash"
            type="button"
          >
            <svg
              class="opacity-0 group-hover:opacity-100 transition-opacity text-primary shrink-0"
              fill="none"
              height="20"
              viewBox="0 0 17 17"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.6451 2.88318H4.87021C2.88158 2.88318 1.69055 4.08539 1.69055 6.1073V12.0364C1.69055 14.0528 2.88158 15.2605 4.87021 15.2605C5.09691 15.2352 5.2685 15.0409 5.2685 14.8097C5.2685 14.5784 5.09691 14.3842 4.87021 14.3588C3.35044 14.3588 2.57978 13.5774 2.57978 12.0364V6.1073C2.57978 4.56628 3.35044 3.78484 4.87021 3.78484H9.6451C11.1649 3.78484 11.9301 4.56628 11.9301 6.1073V12.0364C11.9301 13.5774 11.1649 14.3588 9.6451 14.3588H7.88281C7.65611 14.3842 7.48452 14.5784 7.48452 14.8097C7.48452 15.0409 7.65611 15.2352 7.88281 15.2605H9.65048C11.6445 15.2605 12.8301 14.0528 12.8301 12.0364V6.1073C12.8248 4.09086 11.6337 2.88318 9.6451 2.88318Z"
                fill="currentColor"
              />
              <path
                d="M7.73251 1.20923H12.2777C14.1706 1.20923 15.3043 2.413 15.3095 4.42293V10.3329C15.3095 12.3428 14.1809 13.5466 12.2828 13.5466L12.2777 12.6478C13.7243 12.6478 14.4528 11.8689 14.4528 10.3329V4.42293C14.4528 2.88689 13.7243 2.10798 12.2777 2.10798H7.73251C6.75858 2.10798 6.10783 2.46101 5.78655 3.16044H4.88312C5.27084 1.91737 6.27734 1.20923 7.73251 1.20923Z"
                fill="currentColor"
              />
              <path
                d="M5.46649 11.2371H9.05419C9.32934 11.2371 9.55266 11.0116 9.55266 10.7337C9.55266 10.4559 9.32934 10.2303 9.05419 10.2303H5.46649C5.19133 10.2303 4.96802 10.4559 4.96802 10.7337C4.96802 11.0116 5.19133 11.2371 5.46649 11.2371Z"
                fill="currentColor"
              />
              <path
                d="M5.46649 7.91317H7.697C7.97216 7.91317 8.19548 7.68765 8.19548 7.40977C8.19548 7.13189 7.97216 6.90637 7.697 6.90637H5.46649C5.19133 6.90637 4.96802 7.13189 4.96802 7.40977C4.96802 7.68765 5.19133 7.91317 5.46649 7.91317Z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
        <pre
          class="px-2 pb-1 text-[0.75rem] font-mono max-h-64 overflow-auto"
        >
          {
   addr 1,
   port 2 
}
        </pre>
      </div>
      <div
        class="group relative w-full rounded border border-transparent text-[0.75rem] bg-badge-10"
      >
        <div
          class="flex items-center justify-between gap-2 px-2 pt-1"
        >
          <span
            class="font-medium leading-[1.125rem]"
          >
            tmpl
          </span>
          <button
            aria-label="Copy tmpl"
            class="rounded-md hover:bg-primary-wash"
            type="button"
          >
            <svg
              class="opacity-0 group-hover:opacity-100 transition-opacity text-primary shrink-0"
              fill="none"
              height="20"
              viewBox="0 0 17 17"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.6451 2.88318H4.87021C2.88158 2.88318 1.69055 4.08539 1.69055 6.1073V12.0364C1.69055 14.0528 2.88158 15.2605 4.87021 15.2605C5.09691 15.2352 5.2685 15.0409 5.2685 14.8097C5.2685 14.5784 5.09691 14.3842 4.87021 14.3588C3.35044 14.3588 2.57978 13.5774 2.57978 12.0364V6.1073C2.57978 4.56628 3.35044 3.78484 4.87021 3.78484H9.6451C11.1649 3.78484 11.9301 4.56628 11.9301 6.1073V12.0364C11.9301 13.5774 11.1649 14.3588 9.6451 14.3588H7.88281C7.65611 14.3842 7.48452 14.5784 7.48452 14.8097C7.48452 15.0409 7.65611 15.2352 7.88281 15.2605H9.65048C11.6445 15.2605 12.8301 14.0528 12.8301 12.0364V6.1073C12.8248 4.09086 11.6337 2.88318 9.6451 2.88318Z"
                fill="currentColor"
              />
              <path
                d="M7.73251 1.20923H12.2777C14.1706 1.20923 15.3043 2.413 15.3095 4.42293V10.3329C15.3095 12.3428 14.1809 13.5466 12.2828 13.5466L12.2777 12.6478C13.7243 12.6478 14.4528 11.8689 14.4528 10.3329V4.42293C14.4528 2.88689 13.7243 2.10798 12.2777 2.10798H7.73251C6.75858 2.10798 6.10783 2.46101 5.78655 3.16044H4.88312C5.27084 1.91737 6.27734 1.20923 7.73251 1.20923Z"
                fill="currentColor"
              />
              <path
                d="M5.46649 11.2371H9.05419C9.32934 11.2371 9.55266 11.0116 9.55266 10.7337C9.55266 10.4559 9.32934 10.2303 9.05419 10.2303H5.46649C5.19133 10.2303 4.96802 10.4559 4.96802 10.7337C4.96802 11.0116 5.19133 11.2371 5.46649 11.2371Z"
                fill="currentColor"
              />
              <path
                d="M5.46649 7.91317H7.697C7.97216 7.91317 8.19548 7.68765 8.19548 7.40977C8.19548 7.13189 7.97216 6.90637 7.697 6.90637H5.46649C5.19133 6.90637 4.96802 7.13189 4.96802 7.40977C4.96802 7.68765 5.19133 7.91317 5.46649 7.91317Z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
        <pre
          class="px-2 pb-1 text-[0.75rem] font-mono max-h-64 overflow-auto"
        >
          pdus {
  eth
}
        </pre>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
